4_k8s/9-moodle/5-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: kulturnetzd
  name: kulturnetzd.ar.olumpos.net
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kulturnetzd.ar.olumpos.net`)
      kind: Rule
      services:
        - name: kulturnetzd-moodle
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: kulturnetzd
  name: kulturnetzd.ar.olumpos.net-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kulturnetzd.ar.olumpos.net`)
      kind: Rule
      services:
        - name: kulturnetzd-moodle
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: kulturnetzd
  name: kulturnetz-d.ar
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kulturnetz-d.ar`)
      kind: Rule
      services:
        - name: kulturnetzd-moodle
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: kulturnetzd
  name: kulturnetz-d.ar-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kulturnetz-d.ar`)
      kind: Rule
      services:
        - name: kulturnetzd-moodle
          port: 80
